--- a/index.html
+++ b/index.html
@@ -3,401 +3,94 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Professional Photoshop Services</title>
-	<link rel="stylesheet" href="css/select.css">
-	<link rel="stylesheet" href="css/reset.css">
+	<title>Hovar Media</title>
+
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<!--
+	<link rel="dns-prefetch" href="//ajax.googleapis.com">
+
+	<script type="text/javascript" src="js/vendor.min.js" id="bp-js-js"></script>
+	<script type="text/javascript" src="js/script.js" id="td-js-js"></script>
+-->
 </head>
 
-<body>
-	<div class="wrapper">
-		<header class="header">
+<body class="main-page">
 
-			<div class="header__inner">
+	<nav class="navbar navbar-expand-lg navbar-expand-md fixed-top header navbar-dark">
 
-				<div class="header__inner-container">
-					<div class="logo">
-						<a href="#" class="logo__link"> PROPHOTO SERVICES</a>
-					</div>
-					<nav class="menu">
-
-						<input id="menu__toggle" type="checkbox">
-						<label for="menu__toggle" class="menu__btn">
-							<span></span>
-						</label>
-
-						<ul class="menu__list">
-							<li class="menu__list-item">
-								<a class="menu__list-link" href="#totop">Главная</a>
-							</li>
-							<li class="menu__list-item">
-								<a class="menu__list-link" href="#service">Услуги</a>
-							</li>
-							<li class="menu__list-item">
-								<a class="menu__list-link" href="#about-us">О нас</a>
-							</li>
-							<li class="menu__list-item">
-								<a class="menu__list-link" href="#contact">Контакты</a>
-							</li>
-						</ul>
+		<a style="color: #fff;" class="navbar-brand" href="index.html"> H<img class="logo" src="images/крутилка белая.png"
+				alt="logo">var
+			Media
+		</a>
 
 
-					</nav>
-				</div>
-
-			</div>
-			<div id="totop" class="container">
-				<div class="header__image">
-
-					<div class="header__image-item">
-						<img class="header__img-tablet" src="images/tablet.png" alt="tablet">
-					</div>
-
-
-					<div class="header__image-item">
-						<div class="header__image-item-img">
-							<img class="header__img-services" src="images/logo.png" alt="logo">
-						</div>
-
-						<div class="header__image-item-text">
-							<div class="header__image-text">
-								<ul>
-									<li>Обработка фото</li>
-									<li>Пластика на фото</li>
-									<li>Фотомонтаж</li>
-								</ul>
-							</div>
-							<div class="header__image-text">
-								<ul>
-									<li>Профессиональная ретушь</li>
-									<li>Любые изменения на фото</li>
-									<li>Работа с векторной графикой</li>
-								</ul>
-							</div>
-
-						</div>
-
-
-						<div class="header__image-item-line"></div>
-
-
-					</div>
-					<div class="header__image-item">
-						<img class="header__img woman" src="images/woman-painter.png" alt="woman">
-					</div>
-
-				</div>
-				<div class="header-photo">
-					<img class="header-photo" src="images/header-photo.png" alt="photos">
-				</div>
-			</div>
-
-		</header>
-
-
-		<div class="content">
-			<div id="service" class="services">
-				<div class="container">
-					<h3 class="services__title title">Наши услуги</h3>
-					<div class="services__line line"></div>
-
-					<div class="services__row">
-
-						<div class="services__row-item-1 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									ЗАМЕНА ФОНА
-								</h5>
-								<img class="services__row-img" src="images/services/zamena-fona.png" alt="замена фона">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">250</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">20</span> мин.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-						<div class="services__row-item-2 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									УДАЛЕНИЕ ОБЪЕКТА
-								</h5>
-								<img class="services__row-img" src="images/services/udalenie-objecta.png"
-									alt="удаление объекта">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">150</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">10</span> мин.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-						<div class="services__row-item-3 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									РЕСТАВРАЦИЯ
-								</h5>
-								<img class="services__row-img" src="images/services/restavr.png" alt="реставрация">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">350</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">1</span> час</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-
-						<div class="services__row-item-4 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									РЕТУШЬ
-								</h5>
-								<img class="services__row-img" src="images/services/retouch.png" alt="ретушь">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">100</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">30</span> мин.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-						<div class="services__row-item-5 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									DREAM ART
-								</h5>
-								<img class="services__row-img dream-art-img" src="images/services/dream-art.png"
-									alt="dream art">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">700</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">1</span> д.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-						<div class="services__row-item-6 services__item-container">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									АРТ ЗАРИСОВКА
-								</h5>
-								<img class="services__row-img" src="images/services/art-sketch.png" alt="арт зарисовка">
-								<div class="services__row-text">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">1000</span> ₽</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">1</span> д.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-
-
-
-						<div class="services__row-item-7 services__item-container-last">
-							<div class="services__row-item">
-								<h5 class="services__row-title">
-									ДИЗАЙНЕРСКИЕ УСЛУГИ
-								</h5>
-								<img class="services__row-img" src="images/services/design-services.png"
-									alt="дизайнерские услуги">
-								<div class="services__row-text services__text-last">
-									<div class="services__row-price">
-										<p>СТОИМОСТЬ ОТ:</p>
-										<p> <span class="services__row-number">300<span></span> ₽
-										</p>
-									</div>
-									<div class="services__row-term">
-										<p>СРОК ОТ:</p>
-										<p> <span class="services__row-number">2</span> д.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<!--container-->
-
-				</div>
-				<!--services-->
-
-
-				<div id="about-us" class="about">
-					<div class="container">
-						<h3 class="about__title title">НЕМНОГО О НАС</h3>
-						<div class="about__line line"></div>
-						<div class="about__text">
-							<p class="about__text-description">
-								Графический дизайн - это про все визуальные образы, которые встречаются в повседневной жизни:
-								рекламные
-								баннеры и афиши, афиши мероприятий, логотипы, визитки,журналы и прочее.
-							</p>
-							<p class="about__text-list">Любые виды ретуши;
-								Цветокоррекция и усиление резкости снимка; <br>
-								Изменение цвета глаз, волос, коррекция или нанесение макияжа на фото; <br>
-								Удаление дефектов кожи, омоложение, отбеливание зубов; <br>
-								Замена фона, добавление предметов и их стирание; <br>
-								Свадебная ретушь; <br>
-								Профессиональный фотомонтаж и стилизация фотографий; <br>
-								Реставрация старых фотографий и раскрашивание черно-белых; <br>
-								Реставрация фотографий для памятников; <br>
-								Создание фотоколлажей из фотографий; <br>
-								Отрисовка фото с нуля; <br>
-								Предметная обтравка и рекламная ретушь; <br>
-								Ретушь ювелирных изделий; <br>
-								Дизайн
-								мы любим то, что мы делаем и делаем все с любовью!</p>
-						</div>
-					</div>
-				</div>
-
-
-				<div id="contact" class="contacts">
-					<div class="container">
-
-						<div class="contacts-body">
-							<div class="contacts-body__column">
-								<div class="contacts-column">
-									<div class="contacts-column__item">
-										<a href="mailto:pshop@internet.ru">
-											<img class="contacts-icon" src="images/icons/mail-icon.png" alt="Mail">
-										</a>
-									</div>
-									<div class="contacts-column__item">
-										<a href="tel:+79991246655">
-											<img class="contacts-icon" src="images/icons/phone-icon.png" alt="Phone">
-										</a>
-									</div>
-									<div class="contacts-column__item">
-										<a target="_blank" href="https://telegram.me/sanchessssssssssss"> <img
-												class="contacts-icon" src="images/icons/telegram-icon.png" alt="Telegram"> </a>
-									</div>
-
-									<div class="contacts-column__item">
-										<a target="_blank" href="viber://chat?number=%2B79991246655"><img class="contacts-icon"
-												src="images/icons/viber-icon.png" alt="Viber"></a>
-									</div>
-
-									<div class="contacts-column__item">
-										<a target="_blank" href="https://wa.me/79991246655"><img class="contacts-icon"
-												src="images/icons/whatsapp-icon.png" alt="WhatsApp"></a>
-									</div>
-									<div class="div">
-										<a target="_blank" href="https://www.instagram.com/mexeon_art/?hl=ru"><img
-												class="contacts-icon" src="images/icons/instagram-icon.png" alt="Instagram"></a>
-									</div>
-
-
-								</div>
-							</div>
-							<div class="contacts-body__item">
-								<div class="form">
-									<form action="#" id="form" class="form__body">
-										<div class="form__item">
-
-											<input id="formName" placeholder="Ваше имя" type="text" name="name"
-												class="form__input _req">
-										</div>
-										<div class="form__item">
-
-											<input id="formEmail" placeholder="E-mail" type="text" name="email"
-												class="form__input _req _email">
-										</div>
-										<div class="form__item">
-
-											<textarea placeholder="Ваше сообщение" name="message" id="formMessage"
-												class="form__input"></textarea>
-										</div>
-
-										<div class="form__item">
-											<div class="form__label">Прикрепить фото</div>
-											<div class="file">
-												<div class="file__item">
-													<input id="formImage" accept=".jpg, .png, .gif" type="file" name="image"
-														class="file__input">
-													<div class="file__button">Выбрать</div>
-												</div>
-												<div id="formPreview" class="file__preview"></div>
-											</div>
-										</div>
-										<div class="form__item">
-											<div class="checkbox">
-												<input id="formAgreement" checked type="checkbox" name="agreement"
-													class="checkbox__input _req">
-												<label for="formAgreement" class="checkbox__label"><span>Я даю свое согласие на
-														обработку
-														персональных данных в соответствии с <a href="">Условиями</a>*</span></label>
-											</div>
-										</div>
-										<button type="submit" class="form__button">Отправить</button>
-									</form>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-
-			</div>
-			<!--content-->
-			<footer>
-				<div class="container">
-					<div class="footer-body">
-
-					</div>
-				</div>
-			</footer>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="nav navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link text-light" href="index.html">Главная</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-light" href="services.html">Работы</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-light" href="about.html">О нас</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-light" href="contacts.html">Контакты</a>
+				</li>
+			</ul>
 		</div>
-		<!--wrapper-->
+
+	</nav>
+
+	<div class="inner-player embed-responsive embed-responsive-16by9">
+		<video class="embed-responsive-item" muted="muted" autoplay="autoplay" loop="loop" preload="auto" allowfullscreen>
+			<source src="video/hovar.mp4">
+		</video>
+	</div>
+
+	<div class="dark-opacity embed-responsive embed-responsive-16by9"></div>
 
 
 
+	<!--
+	<div id="ajax-page-loader">
+		<div class="page-loader__overlay">
 
+		</div>
+		<div class="page-loader__overlay-2">
 
-		<script src="js/select.js"></script>
-		<script src="js/script.js"></script>
+		</div>
+		<div class="page-loader__content">
+			<svg class="loader" width="95.83" height="49" viewBox="0 0 95.83 49" xmlns="http://www.w3.org/2000/svg">
+				<g stroke-linecap="round" fill-rule="evenodd" font-size="9pt" stroke="none" fill="#fff">
+					<path
+						d="M 89.18 49 L 89.18 8.47 L 76.09 37.94 L 69.51 37.94 L 56.35 8.47 L 56.35 49 L 50.05 49 L 50.05 0 L 59.36 0 L 72.94 31.01 L 86.31 0 L 95.83 0 L 95.83 49 L 89.18 49 Z M 30.8 49 L 30.8 26.67 L 6.65 26.67 L 6.65 49 L 0 49 L 0 0 L 6.65 0 L 6.65 20.93 L 30.8 20.93 L 30.8 0 L 37.45 0 L 37.45 49 L 30.8 49 Z" />
+				</g>
+			</svg>
+
+			<svg width="95.83" height="49" viewBox="0 0 95.83 49" xmlns="http://www.w3.org/2000/svg">
+				<g stroke-linecap="round" fill-rule="evenodd" font-size="9pt" stroke="none" fill="#fff">
+					<path
+						d="M 89.18 49 L 89.18 8.47 L 76.09 37.94 L 69.51 37.94 L 56.35 8.47 L 56.35 49 L 50.05 49 L 50.05 0 L 59.36 0 L 72.94 31.01 L 86.31 0 L 95.83 0 L 95.83 49 L 89.18 49 Z M 30.8 49 L 30.8 26.67 L 6.65 26.67 L 6.65 49 L 0 49 L 0 0 L 6.65 0 L 6.65 20.93 L 30.8 20.93 L 30.8 0 L 37.45 0 L 37.45 49 L 30.8 49 Z" />
+				</g>
+			</svg>
+		</div>
+	</div>
+-->
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="js/main.js"></script>
+	<script src="js/bootstrap.js"></script>
 </body>
 
 </html>
